@@ -1,3 +1,9 @@
+Sat Apr 16 16:38:09 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>
+
+        * DAnCE/examples/Hello/descriptors/run_test.pl: 
+
+          Added perl script running all the steps for deploying an application.
+
 Sat Apr 16 16:10:10 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>
 
         * DAnCE/Plan_Launcher/Plan_Launcher.cpp: 
